parser/src/lexer/snapshots/enderpy__lexer__lexer__tests__test-lexer-49.snap
---
source: src/lexer/lexer.rs
description: ^
---
[
    Token {
        kind: BitXor,
        value: None,
        start: 0,
        end: 1,
    },
]
