parser/src/lexer/snapshots/enderpy__lexer__lexer__tests__test-lexer-56.snap
---
source: src/lexer/lexer.rs
description: "=="
---
[
    Token {
        kind: Eq,
        value: None,
        start: 0,
        end: 2,
    },
]
