parser/src/lexer/snapshots/enderpy__lexer__lexer__tests__test-lexer-57.snap
---
source: src/lexer/lexer.rs
description: "!="
---
[
    Token {
        kind: NotEq,
        value: None,
        start: 0,
        end: 2,
    },
]
