parser/src/lexer/snapshots/enderpy__lexer__lexer__tests__unicode-string-literals-1.snap
---
source: src/lexer/lexer.rs
description: "u\"world\""
---
[
    Token {
        kind: Unicode,
        value: Str(
            "u\"world\"",
        ),
        start: 0,
        end: 8,
    },
]
